syntax = "proto3";
package cache;
option go_package = "./proto;cache";

service Cache {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
  string expiration = 2;
}
message PutRequest {
  string key = 1;
  string value = 2;
  string duration = 3;
}
message PutResponse {
}
message DeleteRequest {
  string key = 1;
}
message DeleteResponse {
}